@@ -36,6 +36,7 @@ version 8.0:
 - AV1 Vulkan encoder
 - ProRes RAW decoder
 - ProRes RAW Vulkan hwaccel
+- ffprobe -codec option
 
 
 version 7.1:
